<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HTWG Grade App</string>
    <string name="title_degree_detail">Grades of Degree: %1$s</string>
    <string name="menu_item_refresh">Refresh</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_clear_search_filter">Clear search history</string>
    
    <string name="grades_menu_item_search">Search</string>
    <string name="grades_menu_item_filter">Filter</string>
    
    <string name="popup_filter_menu_item_text">Search filter: %1$s</string>
    <string name="popup_filter_menu_item_all">All</string>
    <string name="popup_filter_menu_item_grades">Grades</string>
    <string name="popup_filter_menu_item_certificates">Certificates</string>
    <string name="popup_filter_menu_item_modules">Modules</string>
    
    <string name="grades_head_examText">Exam Text</string>
    <string name="grades_head_grade">Grade</string>
    <string name="grades_head_ects">ECTS</string>
    
    <string name="grade_search_hint">Exam text</string>
    <string name="voice_search">Insert voice search</string>
    
    <string name="refreh_loading">Loading degrees and grades, please wait.</string>
    <string name="refreh_success">Successfully loaded degrees and grades!</string>
    <string name="refreh_failed">Failed to load degrees and grades!</string>
    
    
    <!-- Grade details strings -->
    <string name="grade_detail_program">Program</string>
    <string name="grade_detail_exam_number">Exam Number</string>
    <string name="grade_detail_exam_text">Exam Text</string>
    <string name="grade_detail_semester">Semester</string>
    <string name="grade_detail_ects">ECTS</string>
    <string name="grade_detail_grade">Grade</string>
    <string name="grade_detail_type">Type</string>
    <string name="grade_detail_type_modul">Modul</string>
    <string name="grade_detail_type_certificate">Certificate</string>
    <string name="grade_detail_type_graded">Graded</string>
    <string name="grade_detail_state">State</string>
    <string name="grade_detail_notes">Notes</string>
    <string name="grade_detail_attempts">Attempts</string>
    <string name="share_button">Share</string>
    <string name="share_button_text">Look at this, my grade in %1$s: %2$s!</string>
    
   	<!-- Loading details -->
    <string name="load_no_login">No Login data available.</string>
    <string name="load_try_login">Logging in!</string>
    <string name="load_login_failed">Failed to log in!</string>
    <string name="load_lookup_link">Looking for score link.</string>
    <string name="load_lookup_link_failed">Could not find score link!</string>
    <string name="load_add_degrees">Add Degrees&#8230;</string>
    <string name="load_no_degrees_found">Could not find any degrees!</string>
    <string name="load_degrees_add_success">Degrees and grades successfully added!</string>
    <string name="load_internal_error">Internal error while loading data!</string>
    <string name="load_lookup_of_link_failed">Failed to open an internet-link. Please make sure that an internetconnection is established.</string>
    
    <!-- Degree list -->
    <string name="refresh_all">Refresh</string>
    <string name="user_data">User informationen</string>
    <string name="user_data_name">RZ-User name:</string>
    <string name="user_data_nummer">Matriculation number:</string>
    <string name="user_data_birth">Date and place of birth:</string>
    <string name="user_data_address">Address:</string>

</resources>