<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/popup_filter_menu_item_textfilter"
            android:showAsAction="withText"
            android:title="@string/popup_filter_menu_item_text"/>
        <item
            android:id="@+id/popup_filter_menu_item_all"
            android:showAsAction="withText"
            android:title="@string/popup_filter_menu_item_all"/>
        <item
            android:id="@+id/popup_filter_menu_item_grades"
            android:showAsAction="withText"
            android:title="@string/popup_filter_menu_item_grades"/>
        <item
            android:id="@+id/popup_filter_menu_item_certificates"
            android:showAsAction="withText"
            android:title="@string/popup_filter_menu_item_certificates"/>
        <item
            android:id="@+id/popup_filter_menu_item_modules"
            android:showAsAction="withText"
            android:title="@string/popup_filter_menu_item_modules"/>
    </group>

</menu>