<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/grade_detail_program"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="left"
            android:text="@string/grade_detail_program"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gradeDetailTextProgram"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="left"
            android:text="@string/grade_detail_program" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/gradeDetailTextExamNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="left"
            android:text="@string/grade_detail_exam_number"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/grade_detail_exam_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="left"
            android:text="@string/grade_detail_exam_number" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/gradeDetailTextExamText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="left"
            android:text="@string/grade_detail_exam_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/grade_detail_exam_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="left"
            android:text="@string/grade_detail_exam_text" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/gradeDetailTextSemester"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="left"
            android:text="@string/grade_detail_semester"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/grade_detail_semester"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="left"
            android:text="@string/grade_detail_semester" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/gradeDetailTextECTS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="left"
            android:text="@string/grade_detail_ects"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/grade_detail_ects"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="left"
            android:text="@string/grade_detail_ects" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/gradeDetailTextGrade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="left"
            android:text="@string/grade_detail_grade"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/grade_detail_grade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="left"
            android:text="@string/grade_detail_grade" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/gradeDetailTextType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="left"
            android:text="@string/grade_detail_type"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/grade_detail_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="left"
            android:text="@string/grade_detail_type" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/gradeDetailTextState"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="left"
            android:text="@string/grade_detail_state"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/grade_detail_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="left"
            android:text="@string/grade_detail_state" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/gradeDetailTextNotes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="left"
            android:text="@string/grade_detail_notes"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/grade_detail_notes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="left"
            android:text="@string/grade_detail_notes" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/gradeDetailTextAttempts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="left"
            android:text="@string/grade_detail_attempts"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/grade_detail_attempts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="left"
            android:text="@string/grade_detail_attempts" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_button" />
    </LinearLayout>

</LinearLayout>