<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dip"
    android:background="@drawable/grades_detail_border" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/grade_detail_program"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="left"
            android:text="@string/grade_detail_program"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gradeDetailTextProgram"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="left"
            android:text="@string/grade_detail_program"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/gradeDetailTextExamNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="left"
            android:text="@string/grade_detail_exam_number"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/grade_detail_exam_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="left"
            android:text="@string/grade_detail_exam_number"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/gradeDetailTextExamText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="left"
            android:text="@string/grade_detail_exam_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/grade_detail_exam_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="left"
            android:text="@string/grade_detail_exam_text"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/gradeDetailTextSemester"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="left"
            android:text="@string/grade_detail_semester"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/grade_detail_semester"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="left"
            android:text="@string/grade_detail_semester"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/gradeDetailTextECTS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="left"
            android:text="@string/grade_detail_ects"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/grade_detail_ects"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="left"
            android:text="@string/grade_detail_ects"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/gradeDetailTextGrade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="left"
            android:text="@string/grade_detail_grade"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/grade_detail_grade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="left"
            android:text="@string/grade_detail_grade"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/gradeDetailTextType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="left"
            android:text="@string/grade_detail_type"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/grade_detail_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="left"
            android:text="@string/grade_detail_type"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/gradeDetailTextState"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="left"
            android:text="@string/grade_detail_state"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/grade_detail_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="left"
            android:text="@string/grade_detail_state"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/gradeDetailTextNotes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="left"
            android:text="@string/grade_detail_notes"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/grade_detail_notes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="left"
            android:text="@string/grade_detail_notes"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/gradeDetailTextAttempts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="left"
            android:text="@string/grade_detail_attempts"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/grade_detail_attempts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="left"
            android:text="@string/grade_detail_attempts"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>