<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dip">

	<ListView
	    android:id="@+id/degree_list"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="0.3"
	    android:divider="?android:attr/dividerHorizontal" >
	</ListView>

	<ScrollView
		    android:id="@+id/scrollView1"
		    android:layout_width="match_parent"
		    android:layout_height="0dp"
	    	android:layout_weight="0.7"
	    	android:divider="?android:attr/dividerHorizontal" >
		    
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:gravity="bottom|center" >
	
			<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/user_data"
			    android:textSize="16sp" />
			
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:gravity="left" >
				<TextView
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/user_data_name"
				    android:textSize="16sp"
				    android:paddingRight="10sp" />
			</LinearLayout>
			
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:gravity="center">
	
				<TextView
					    android:id="@+id/logged_in_user_fullname"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:textStyle="bold"
					    android:text=""
					    android:textSize="16sp" />
			</LinearLayout>
			
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:gravity="left" >
				<TextView
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/user_data_nummer"
				    android:textSize="16sp"
				    android:paddingRight="10sp" />
			</LinearLayout>
			
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:gravity="center">
	
				<TextView
					    android:id="@+id/logged_in_user_nummer"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:textStyle="bold"
					    android:text=""
					    android:textSize="16sp" />
			</LinearLayout>
			
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:gravity="left" >
				<TextView
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/user_data_birth"
				    android:textSize="16sp"
				    android:paddingRight="10sp" />
			</LinearLayout>
			
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:gravity="center">
	
				<TextView
					    android:id="@+id/logged_in_user_birth"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:textStyle="bold"
					    android:text=""
					    android:textSize="16sp" />
			</LinearLayout>
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:gravity="left" >
				<TextView
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/user_data_address"
				    android:textSize="16sp"
				    android:paddingRight="10sp" />
			</LinearLayout>
			
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:gravity="center">
	
				<TextView
					    android:id="@+id/logged_in_user_address"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:textStyle="bold"
					    android:text=""
					    android:textSize="16sp" />
			</LinearLayout>
		    
		</LinearLayout>
	</ScrollView>

</LinearLayout>
