<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FF99CCFF" >

        <TextView
            android:id="@+id/grades_head_1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:height="30dip"
            android:gravity="left"
            android:textSize="20sp"
            android:text="@string/grades_head_examText" />

        <TextView
            android:id="@+id/grades_head_3"
            android:width="80dp"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="left"
            android:textSize="20sp"
            android:text="@string/grades_head_ects" />
        
        <TextView
            android:id="@+id/grades_head_2"
            android:width="80dp"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="left"
            android:textSize="20sp"
            android:text="@string/grades_head_grade" />
    </LinearLayout>

    <!-- List Divider -->

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="?android:attr/listDivider" />

    <!-- Table: -->

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ListView
            android:id="@+id/grades_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
        </ListView>
    </LinearLayout>

</LinearLayout>

<!--
     ListView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/grades_list"
    style="?android:attr/listViewStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".GradeDetailFragment"/
-->

